# Yet_Another_Cpp_DeepLearning_Library

./: CMakeLists.txt  README.md
YetAnotherDeepLearningLib/: AIAlgo.cpp  CMakeLists.txt  YetAnotherDeepLearningLib.cpp  YetAnotherDeepLearningLib.h
YetAnotherDeepLearningLib/Tensor/: Helper.h  Tensor.cpp  Tensor.h
YetAnotherDeepLearningLib/Test/: Test.cpp  Test.h
